# fsc-order-microservice

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 001_order_db_schema.py  002_seed_catalogue_demo.py  003_job_issue_photo_url.py  004_technicians_and_job_technician.py  005_job_eta_fields.py  006_job_customer_snapshot.py  007_garage_settings.py  008_job_delivery_location.py
app/: main.py
app/api/: deps.py
app/api/api_o1/: routes.py
app/api/api_o1/endpoints/: o1.py
app/core/: config.py  exceptions.py
app/core/database/: dependency.py
app/integrations/: outbound.py
app/models/: __init__.py  order_enums.py  order_models.py
app/realtime/: tracking_hub.py
app/services/: operations.py
