[project]
name = "fsc-order-microservice"
version = "0.1.0"
description = "Order / jobs microservice (First Car Station spec — order_db)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "boto3>=1.40.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "PyJWT>=2.10.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "redis>=5.0.0",
    "SQLAlchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
    "pytest>=8.3.4",
    "stripe>=12.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4"]
